--- a/windows.service.restart.yml
+++ b/windows.service.restart.yml
@@ -1,7 +1,7 @@
 ---
-- hosts: {{ host }}
+- hosts: "{{ host }}"
   tasks:
    - name: Restart service {{ service }}
      win_service:
-       name: {{ service }}
+       name: "{{ service }}"
        state: restarted
